--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,37 @@ body{
     line-height: 10px;
 
 }
+.images1{
+    position: relative;
+     width: 50%;
+}
+.port1{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+.text11{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.images1:hover .port1{
+    opacity: 0.3;
+}
+.images1:hover .text11{
+    opacity: 2;
+}
+.text2{
+    background-color: yellow;
+    color: black;
+    font-size: 40px;
+    padding: 16px 32px;
+}
