--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,17 @@ body{
     text-align: center;
     background: transparent;
     color: white;
+    
 }
+.third-text img{
+    width: 200px;
+}
+
+
+.third-text h1{
+    margin-top: -10%;
+}
+
 .fourth-text{
     text-align: center;
     color: black;
@@ -80,10 +90,18 @@ body{
     margin-top: 2%;
 }
 
-.row h1{
+.row1 h1{
     float: center;
     text-align: center;
-    margin-top: 2%;
+    margin-top: 0%;
+    width: 100%;
+    margin: 0%;
+}
+.row1{
+    height: 500px;
+    margin: 12%;
+    margin-top: 100px;
+    
 }
 .contacts {
     
@@ -182,7 +200,69 @@ body{
   
 }  
 
-.toog{
-    /* position: absolute; */
-    /* left: 5%; */
+.A1,.A2,.A3{
+    width: 300px;
+    height: 300px;
+    position: relative;
+    float: left;
+    margin-left: 8%;
+    
+}
+ .A1 img,.A2 img,.A3 img{
+     width: 100px;
+     height: 100px;
+     
+ }
+ .B1,.B2,.B3{
+     display: none;
+    position: absolute;
+    margin-top: 30px;
+}
+ .logos{
+     width: 100%;
+     height: 150px;
+     margin-left: 0%;
+     margin-top: 3%;
+    line-height: 30px;
+    text-align: center;
+ }
+
+ /* sample portfolio */
+.C,.C1,.C2,.C3,.C4,.C5,.C6,.C7{
+    width: 200px;
+    height: 200px;
+    /* background-color: salmon; */
+    position: relative;
+    margin: 5px;
+
+}
+.C img,.C1 img,.C2 img,.C3 img,.C4 img,.C5 img,.C6 img,.C7 img{
+    width: 200px;
+    height: 200px;
+  
+    
+}
+.D,.D1,.D2,.D3,.D4,.D5,.D6,.D7{
+    display: none;
+    position: absolute;
+    margin-top: -200px;
+    width: 100%;
+    height: 40%;
+    text-align: center;
+    color: black;
+
+}
+.logos2{
+    display: inline-flex;
+    width: 100%;
+    height: 330px;
+    margin-left: 5%;
+}
+.logos3{
+    display: inline-flex;
+    width: 100%;
+    height: 200px;
+    margin-top: -300%;
+    margin-left: 5%;
+
 }
