--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body{
 }
 .section2{
     background: whitesmoke;
-    height: 300px;
+   min-height: 300px;
 }
 .second-text{
     color: black;
@@ -39,7 +39,7 @@ body{
     
 }
 .section3{
-    height: 300px;
+    min-height: 300px;
     background: url(assets/s_image.jpg) no-repeat;
 }
 .third-text{
@@ -89,7 +89,9 @@ body{
 #images2{
     margin-top: 2%;
 }
-
+.second-text{
+    margin-top: 3%;
+}
 .row1 h1{
     float: center;
     text-align: center;
@@ -98,14 +100,15 @@ body{
     margin: 0%;
 }
 .row1{
-    height: 500px;
-    margin: 12%;
+    min-height: 500px;
+    /* margin: 12%; */
     margin-top: 100px;
+    width: 100%;
     
 }
 .contacts {
     
-    height: 700px;
+    min-height: 700px;
 }
 .contacts h1{
     float: center;
@@ -127,7 +130,7 @@ body{
     margin-top: 3%;
     border: 1px solid black;
     width: 56%;
-    height: 40%;
+    height: 200px;
 }
 .bottom1 i{
     font-size: 30px;
@@ -201,7 +204,7 @@ body{
 }  
 
 .A1,.A2,.A3{
-    width: 300px;
+    width: 25%;
     height: 300px;
     position: relative;
     float: left;
@@ -220,32 +223,35 @@ body{
 }
  .logos{
      width: 100%;
-     height: 150px;
+     min-height: 150px;
      margin-left: 0%;
      margin-top: 3%;
     line-height: 30px;
     text-align: center;
+    flex-wrap: wrap;
+
  }
 
  /* sample portfolio */
 .C,.C1,.C2,.C3,.C4,.C5,.C6,.C7{
-    width: 200px;
-    height: 200px;
+    width: 18%;
+    height: 80%;
     /* background-color: salmon; */
     position: relative;
-    margin: 5px;
+    margin: 1.5%;
+    float: left;
 
 }
 .C img,.C1 img,.C2 img,.C3 img,.C4 img,.C5 img,.C6 img,.C7 img{
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
   
     
 }
 .D,.D1,.D2,.D3,.D4,.D5,.D6,.D7{
     display: none;
     position: absolute;
-    margin-top: -200px;
+    margin-top: -80%;
     width: 100%;
     height: 40%;
     text-align: center;
@@ -254,15 +260,42 @@ body{
 }
 .logos2{
     display: inline-flex;
-    width: 100%;
-    height: 330px;
-    margin-left: 5%;
+    width: 85%;
+    height: 200px;
+    margin-left: 14%;
+    flex-wrap: wrap;
+    float: left;
 }
 .logos3{
     display: inline-flex;
-    width: 100%;
+    width: 85%;
     height: 200px;
-    margin-top: -300%;
-    margin-left: 5%;
+    margin-left: 14%;
+    flex-wrap: wrap;
+    float: left;
+    
 
+}
+@media (max-width:1100px){
+    .logos{
+        flex-flow: column;
+        display: flex;
+        justify-content: center;
+        margin-left: 50%;
+        margin-right: 0;
+    }
+    .logos2,.logos3{
+        flex-flow: column;
+        display: flex;
+        justify-content: center;
+        margin-left: 50%;
+        margin-right: 0;
+    }
+    .C img,.C1 img,.C2 img,.C3 img,.C4 img,.C5 img,.C6 img,.C7 img{
+        width: 100%;
+        height: 100%;
+        
+      
+        
+    }
 }
