--- a/css/style.css
+++ b/css/style.css
@@ -232,11 +232,10 @@ body{
 
  }
 
- /* sample portfolio */
+ 
 .C,.C1,.C2,.C3,.C4,.C5,.C6,.C7{
     width: 18%;
     height: 80%;
-    /* background-color: salmon; */
     position: relative;
     margin: 1.5%;
     float: left;
@@ -299,3 +298,16 @@ body{
         
     }
 }
+/* contact.html */
+#show-contact {
+    display: none;
+  }
+  
+  .contact {
+    cursor: pointer;
+    color: #0088cc;
+  }
+  
+  .contact:hover {
+    text-decoration: underline;
+  }  
