--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,6 @@ body{
     color: white;
     text-emphasis:bold;
 }
-.section1{
-    background: url(assets/h_img.jpg) no-repeat;
-    
-}
 .logo{
     margin-left: auto;
     margin-right: auto;
@@ -41,11 +37,14 @@ body{
 .section3{
     min-height: 300px;
     background: url(assets/s_image.jpg) no-repeat;
+    background-size: cover;
 }
 .third-text{
     text-align: center;
     background: transparent;
     color: white;
+    
+    
     
 }
 .third-text img{
@@ -298,16 +297,40 @@ body{
         
     }
 }
-/* contact.html */
-#show-contact {
-    display: none;
-  }
-  
-  .contact {
-    cursor: pointer;
-    color: #0088cc;
-  }
-  
-  .contact:hover {
-    text-decoration: underline;
-  }  
+.section1{
+    width: 100%;
+    height: 700px;
+    background: url(assets/h_img.jpg) no-repeat;
+    background-size: cover;
+
+}
+.Z{
+    width: 50%;
+    margin-left: 25%;
+    height: 430px;
+    margin-top: 15%;
+    color: white;
+    
+}
+.Z IMG{
+    margin-left: 40%;
+    
+}
+.Z p{
+text-align: center;
+color: white;
+font-size: 30px;
+line-height: 20px;
+font-family: sans-serif;
+
+}
+.mouse{
+margin-top: 22%;
+margin-right: 50%;
+float:right ;
+
+}
+.Z h4{
+    font-weight: unset;
+}
+.third-text
